virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: docker01-andres-pillajo-virtualservice
  namespace: carlos
spec:
  hosts:
  - "*"
  gateways:
  - docker01-andres-pillajo-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: docker01-andres-pillajo-svc
        port:
          number: 5000
